--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "ImageViewer": "^1.5.8",
     "native-base": "^2.3.10",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
+    "react-native-image-zoom-viewer": "^2.1.0",
     "react-navigation": "^1.5.7"
   },
   "devDependencies": {
