--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'MusicClassApp'
+include ':node_modules'
+include ':react-native-youtube'
+project(':react-native-youtube').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-youtube/android')
 
 include ':app'
